# raptor

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: compare.py  eval_retrieval.py  run_benchmark.py
dashboard/backend/: app.py  requirements.txt
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/src/: App.css  App.jsx
dashboard/frontend/src/components/: Chat.jsx  TreeGraph.jsx  TreeInfo.jsx  Upload.jsx
demo/: alice_in_wonderland.txt  metamorphosis.txt  sherlock_scandal.txt
notebooks/: demo.ipynb
raptor/: __init__.py  benchmark.py  config.py  raptor.py  utils.py
raptor/models/: __init__.py  anthropic_models.py  base.py  embedding_models.py  openai_models.py
raptor/retrieval/: __init__.py  base.py  flat_retriever.py  tree_retriever.py
raptor/tree/: __init__.py  builder.py  cluster_builder.py  cluster_utils.py  structures.py
